# ChatPDF

./: README.md  alembic.ini  auth.json  docker-compose.yml  index.html  package-lock.json  package.json  pyproject.toml  requirements.txt  st_app.py  user.json
alembic/: env.py
alembic/versions/: 53740683bf0d_add_role_column_to_users.py  6e8bfb3391e6_initial_migration.py  860908329692_initial_migration.py
app/: auth.py  db.py  main.py  migrate_db.py  models.py  rag.py  schemas.py
src/: App.jsx  index.css
src/components/: ChatScreen.jsx  UploadScreen.jsx
src/components/Admin/: AdminDashboard.jsx  DocumentList.jsx  DocumentUpload.jsx
src/components/Shared/: DateBadge.jsx  UserProfile.jsx
src/components/User/: ChatInterface.jsx  Sidebar.jsx
src/components/auth/: Login.jsx  Register.jsx
src/context/: AuthContext.jsx
src/services/: api.js  auth.js
