[project]
name = "ask-ai3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.17.1",
    "argon2-cffi>=25.1.0",
    "bcrypt==4.1.2",
    "google-generativeai==0.3.2",
    "npm>=0.1.1",
    "ocrmypdf>=16.11.1",
    "psycopg2-binary>=2.9.11",
    "pydantic[email]>=2.12.4",
    "pypdf>=6.2.0",
    "python-multipart>=0.0.20",
    "rank-bm25==0.2.2",
    "streamlit>=1.51.0",
]
